--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Quiz Show</title>
+    <title>Quiz App</title>
     <!-- Latest compiled and minified CSS -->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -28,7 +28,7 @@
     <nav class="navbar  mynav" role="navigation" id="navbar">
     			<div class="container">
 
-            <a class="navbar-brand mynav" href="{% url 'home' %}">Simple Quiz</a>
+            <a class="navbar-brand mynav" href="{% url 'home' %}">Quiz Website</a>
 
     					<ul class="nav navbar-nav navbar-right">
     						{% if user.is_authenticated %}
