--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Welcome to simplequiz Views</h1>
+    <h1>Welcome to quiz website! Patel Check karo</h1>
 
 {% endblock %}
